--- a/style.css
+++ b/style.css
@@ -1,5 +1,41 @@
+header {
+  text-align: center;
+  padding: 10px;
+}
+
+nav a{
+  color: green;
+  background-color: blue;
+  padding: 10px;
+  text-align: center;
+}
+
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 0%;
+}
+
+#featured-property figure{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  font-size: 12px;
+}
+
+#featured-property p{
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+}
+
+#details div{
+  float: left;
+  text-align: center;
+  width: 25%;
+  background-color: red;
 }
